--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <script src="particle.js"></script>
     <script src="firework.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
   </head>
   <body>
+    <div class="message-wrapper">
+      <div class="message">
+        <h2>Happy Birthday!!<h2>
+      </div>
+    </div>
   </body>
 </html>
